fix scrollbars

--- a/css/main.sass
+++ b/css/main.sass
@@ -1,8 +1,6 @@
 ---
 ---
 
-@import 'syntax-highlighting'
-
 @import 'bourbon/bourbon'
 
 .cf
@@ -25,6 +23,16 @@ $font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 main
   display: block
 
+::-webkit-scrollbar
+  width: 8px
+  height: 8px
+
+::-webkit-scrollbar-thumb 
+  background-color: #ccc
+  border-radius: 0.5em
+
+::-webkit-scrollbar-thumb:hover
+  background-color: #aaa
 
 body
   font-family: $font-sans
@@ -641,9 +649,11 @@ code
 
 pre
   padding: 8px 12px
-
   overflow-x: auto
+  display: block
   > code
     border: 0
     padding-right: 0
     padding-left: 0
+
+@import 'syntax-highlighting'
